// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Anchor Disabled anchor link 1`] = `
<a
  className=""
  href="https://www.google.com/"
  role="anchor"
  size="sm"
  target="_top"
>
  external link
</a>
`;

exports[`Render Anchor Disabled anchor link dark 1`] = `
<a
  className=""
  href="https://www.google.com/"
  role="anchor"
  size="sm"
  target="_top"
>
  external link
</a>
`;

exports[`Render Anchor External anchor link 1`] = `
<a
  className=""
  href="https://www.google.com/"
  role="anchor"
  size="sm"
  target="_blank"
>
  external link
  <i
    className=""
    href="https://www.google.com/"
    size="sm"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable={false}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
      />
    </svg>
  </i>
</a>
`;

exports[`Render Anchor External anchor link dark 1`] = `
<a
  className=""
  href="https://www.google.com/"
  role="anchor"
  size="sm"
  target="_blank"
>
  external link
  <i
    className=""
    href="https://www.google.com/"
    size="sm"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable={false}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
      />
    </svg>
  </i>
</a>
`;

exports[`Render Anchor Renders with no styles 1`] = `
<a
  className=""
  href="https://www.google.com/"
  role="anchor"
  size="sm"
  target="_top"
>
  simple link
</a>
`;

exports[`Render Anchor Renders with no styles dark 1`] = `
<a
  className=""
  href="https://www.google.com/"
  role="anchor"
  size="sm"
  target="_top"
>
  simple link
</a>
`;
